--- a/EmployeeManagementClient/src/app/components/home-page/home-page.component.scss
+++ b/EmployeeManagementClient/src/app/components/home-page/home-page.component.scss
@@ -11,10 +11,10 @@ $main-color: #168d83;
 
 .p1 {
 	position: fixed;
-	top: 150px;
+	top:30%;
 	right: 0;
 	font-family: 'Rubik', sans-serif;
-	font-size: 80px;
+	font-size: 450%;
 	margin-right: 60px;
 	font-weight: bold;
 	color: #ffffff; /* צבע הכתב */
@@ -24,10 +24,10 @@ $main-color: #168d83;
 }
 .p2 {
 	position: fixed;
-	top: 250px;
+	top: 40%;
 	right: 0;
 	font-family: 'Rubik', sans-serif;
-	font-size: 80px;
+	font-size: 450%;
 	margin-right: 60px;
 	font-weight: bold;
 	color: #ffffff; /* צבע הכתב */
